Fixed some alignment issue in Self Profile, Added Google Fonts link

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,6 @@
  body
   {
-    background:#4285F4;
+    background:#4285F4; font-family: Montserrat;
   }
 .gray-background
 {
@@ -52,7 +52,7 @@
 
   /*Searchbar css*/
   *{
-      font-family: 'Varela', sans-serif;
+      
    }
    .topbar{
 
